# image-organiser

./: .gitignore  Cargo.toml  README.md
.github/workflows/: automerge.yml  build.yml  release.yml  rust.yml
src/: cli_configuration.rs  file_organiser.rs  main.rs
src/cli/: action.rs  arguments.rs  cli.rs  configuration.rs  mod.rs
src/cli_configuration/: cli.rs  cli_arguments.rs  command_configuration.rs  commands.rs  file_action.rs  mod.rs
src/dateformatter/: formatter.rs  mod.rs  strategy.rs
src/file_organiser/: organiser.rs
src/organiser/: default_organiser.rs  handle_path.rs  mod.rs  organiser.rs
src/printer/: printer.rs
