[package]
name = "image-organiser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17.3"
env_logger = "0.10.0"
log = "0.4.17"
clap-verbosity-flag = "2.0.0"
